--- a/DatingApp-SPA/src/app/app.component.html
+++ b/DatingApp-SPA/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!-- the content below is only a placedholder and can be replaced-->
-<div>
-  <h1>Dating App</h1>
+<app-nav></app-nav>
+  <app-home></app-home>
   <app-value></app-value>
-</div>
+
