end of section 7

--- a/DatingApp-SPA/src/app/app.component.html
+++ b/DatingApp-SPA/src/app/app.component.html
@@ -1,5 +1,4 @@
 <!-- the content below is only a placedholder and can be replaced-->
 <app-nav></app-nav>
-  <app-home></app-home>
-  <app-value></app-value>
+<router-outlet></router-outlet>
 
