--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -2,34 +2,34 @@
   <div class="container">
     <a class="navbar-brand" [routerLink]="['/home']">Dating-App</a>
 
-    <ul  *ngIf="loggedIn()" class="navbar-nav mr-auto">
+    <ul *ngIf="loggedIn()" class="navbar-nav mr-auto">
       <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" [routerLink]="['/members']" >Matches </a>
+        <a class="nav-link" [routerLink]="['/members']">Matches </a>
       </li>
       <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" [routerLink]="['/lists']" >Lists</a>
+        <a class="nav-link" [routerLink]="['/lists']">Lists</a>
       </li>
-      <li class="nav-item" routerLinkActive="active" >
-        <a class="nav-link" [routerLink]="['/messages']" >Messages</a>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" [routerLink]="['/messages']">Messages</a>
       </li>
     </ul>
-  
+
     <div *ngIf="loggedIn()" class="dropdown" dropdown>
       <a class="dropdown-toggle text-light" dropdownToggle>
-        Welcome {{authService.decodeToken?.unique_name | titlecase}}
+        Welcome {{ authService.decodeToken?.unique_name | titlecase }}
       </a>
-  
+
       <div class="dropdown-menu mt-3" *dropdownMenu>
-        <a class="dropdown-item" href="#"
+        <a class="dropdown-item" [routerLink]="['/member/edit']"
           ><i class="fa fa-user"></i> Edit Profile</a
         >
         <div class="dropdown-divider"></div>
-        <a class="dropdown-item"(click)="logout()"
+        <a class="dropdown-item" (click)="logout()"
           ><i class="fa fa-sign-out"></i> Logout</a
         >
       </div>
     </div>
-  
+
     <form
       *ngIf="!loggedIn()"
       #loginForm="ngForm"
@@ -60,9 +60,7 @@
         Login
       </button>
     </form>
-    
   </div>
- 
 </nav>
 
 <!-- <pre>
