--- a/DatingApp-SPA/src/app/members/member-list/member-edit/member-edit.component.html
+++ b/DatingApp-SPA/src/app/members/member-list/member-edit/member-edit.component.html
@@ -15,7 +15,7 @@
       <div class="card">
         <img
           class="card-img-top img-thumbnail"
-          src="{{ user.photoUrl }}"
+          src="{{ photoUrl }}"
           alt="{{ user.knownAs }}"
         />
         <div class="card-body">
@@ -92,8 +92,8 @@
               </div>
             </form>
           </tab>
-          <tab heading="Edit Photo">
-            <p>Photo edit will go here</p>
+          <tab heading="Edit Photos">
+            <app-photo-editor [photos]="user.photos" (getMemberPhotochange)="updateMainPhoto($event)"></app-photo-editor>
           </tab>
         </tabset>
       </div>
